--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									</header>
 									<a href="https://docs.google.com/spreadsheets/d/1akwYE1JWz3bfU8mT3Ct4GvxoLm78Gnza/edit?usp=share_link&ouid=106771175477356338080&rtpof=true&sd=true" class="image fit"><img src="images/dash.jpg" alt="" /></a>
 									<p>here is an excel guided project, used multiple formulas to clean data, creat pivote table, charts, and dashboard, to analyse and visualize the sales of bike store based on different categories.  </p>
-									<p><a href="https://www.youtube.com/watch?v=opJgMj1IUrc&list=PLUaB-1hjhk8Hyd5NiPQ9CND82vNodlFF5&index=7">youtube prefrance video </a></p>
+									<p><a href="https://www.youtube.com/watch?v=opJgMj1IUrc&list=PLUaB-1hjhk8Hyd5NiPQ9CND82vNodlFF5&index=7">youtube preference video </a></p>
 									<ul class="actions special">
 										<li><a href="https://docs.google.com/spreadsheets/d/1akwYE1JWz3bfU8mT3Ct4GvxoLm78Gnza/edit?usp=share_link&ouid=106771175477356338080&rtpof=true&sd=true" class="button">view excel project</a></li>
 									</ul>
