--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										
 										<h2><a href="https://docs.google.com/spreadsheets/d/1akwYE1JWz3bfU8mT3Ct4GvxoLm78Gnza/edit?usp=share_link&ouid=106771175477356338080&rtpof=true&sd=true">guided project </a></h2>
 									</header>
-									<a href="https://docs.google.com/spreadsheets/d/1akwYE1JWz3bfU8mT3Ct4GvxoLm78Gnza/edit?usp=share_link&ouid=106771175477356338080&rtpof=true&sd=true" class="image fit"><img src="images/dash.jpg" alt="" /></a>
+									<a href="https://docs.google.com/spreadsheets/d/1akwYE1JWz3bfU8mT3Ct4GvxoLm78Gnza/edit?usp=share_link&ouid=106771175477356338080&rtpof=true&sd=true" class="image fit"><img src="pic-10.jpg" alt="" /></a>
 									<p>here is an excel guided project, used multiple formulas to clean data, creat pivote table, charts, and dashboard, to analyse and visualize the sales of bike store based on different categories.  </p>
 									<p><a href="https://www.youtube.com/watch?v=opJgMj1IUrc&list=PLUaB-1hjhk8Hyd5NiPQ9CND82vNodlFF5&index=7">youtube preference video </a></p>
 									<ul class="actions special">
@@ -84,11 +84,21 @@
 										<h2><a href="https://drive.google.com/file/d/1OM8Ki3FkwDR-tPmoF0cAlPADG_WVd4BS/view?usp=share_link">Music Studio & store<br />
 										Excel project</a></h2>
 									</header>
-									<a href="https://drive.google.com/file/d/1OM8Ki3FkwDR-tPmoF0cAlPADG_WVd4BS/view?usp=share_link" class="image fit"><img src="images/loud.jpg" alt="" /></a>
+									<a href="https://drive.google.com/file/d/1OM8Ki3FkwDR-tPmoF0cAlPADG_WVd4BS/view?usp=share_link" class="image fit"><img src="pic-10.jpg" alt="" /></a>
 									<p>here is a project i created for Loud studio & store. created this project using macro, multiple formulas, vlookup, etc....., to creat a price list, and calculate all the expenses and revenue, and collect data from the price list</p>
 									<ul class="actions special">
 										<li><a href="https://drive.google.com/file/d/1OM8Ki3FkwDR-tPmoF0cAlPADG_WVd4BS/view?usp=share_link" class="button">view excel project</a></li>
 									</ul>
+								<article>
+									<header>									
+										<h2><a href="https://drive.google.com/file/d/1OM8Ki3FkwDR-tPmoF0cAlPADG_WVd4BS/view?usp=share_link">Music Studio & store<br />
+										Excel project</a></h2>
+									</header>
+									<a href="https://drive.google.com/drive/folders/1TexuyALrkwog-Njl5I0oZMMh0cAJt92R?usp=sharing" class="image fit"><img src="pic-10.jpg" alt="" /></a>
+									<p>here is a project i worked on as a part of a job recruiting process, where I analysed data to Investigate revenue Decline. created this project using multiple formulas to reach that result in a short period of time determined by the recruiter</p>
+									<ul class="actions special">
+										<li><a href="https://drive.google.com/file/d/1OM8Ki3FkwDR-tPmoF0cAlPADG_WVd4BS/view?usp=share_link" class="button">view excel project</a></li>
+									</ul>	
 								
 					<!--section-->
 						</section>
