--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 									<ul class="actions special">
 										<li><a href="https://drive.google.com/file/d/1OM8Ki3FkwDR-tPmoF0cAlPADG_WVd4BS/view?usp=share_link" class="button">view excel project</a></li>
 									</ul>
+								</article>	
 								<article>
 									<header>									
 										<h2><a href="https://drive.google.com/file/d/1OM8Ki3FkwDR-tPmoF0cAlPADG_WVd4BS/view?usp=share_link">Music Studio & store<br />
