--- a/index.html
+++ b/index.html
@@ -92,15 +92,37 @@
 								</article>	
 								<article>
 									<header>									
-										<h2><a href="https://drive.google.com/file/d/1OM8Ki3FkwDR-tPmoF0cAlPADG_WVd4BS/view?usp=share_link">Music Studio & store<br />
+										<h2><a href="https://drive.google.com/drive/folders/1TexuyALrkwog-Njl5I0oZMMh0cAJt92R?usp=sharing">job recruiting test<br />
 										Excel project</a></h2>
 									</header>
 									<a href="https://drive.google.com/drive/folders/1TexuyALrkwog-Njl5I0oZMMh0cAJt92R?usp=sharing" class="image fit"><img src="images/pic-10.jpg" alt="" /></a>
 									<p>here is a project i worked on as a part of a job recruiting process, where I analysed data to Investigate revenue Decline. created this project using multiple formulas to reach that result in a short period of time determined by the recruiter</p>
 									<ul class="actions special">
-										<li><a href="https://drive.google.com/file/d/1OM8Ki3FkwDR-tPmoF0cAlPADG_WVd4BS/view?usp=share_link" class="button">view excel project</a></li>
+										<li><a href="https://drive.google.com/drive/folders/1TexuyALrkwog-Njl5I0oZMMh0cAJt92R?usp=sharing" class="button">view excel project</a></li>
 									</ul>	
-								
+								</article>
+								<article>
+									<header>									
+										<h2><a href="https://docs.google.com/spreadsheets/d/1pUWnb29foiTXKqd8OiPbvVx5YVlqg_oq/edit?usp=sharing&ouid=106771175477356338080&rtpof=true&sd=true">stock and sales for Prima Medica<br />
+										Excel project</a></h2>
+									</header>
+									<a href="https://docs.google.com/spreadsheets/d/1pUWnb29foiTXKqd8OiPbvVx5YVlqg_oq/edit?usp=sharing&ouid=106771175477356338080&rtpof=true&sd=true" class="image fit"><img src="images/pic-10.jpg" alt="" /></a>
+									<p>here is a project i created for my company, created this project using macro, multiple formulas, vlookup, etc....., to creat a price list, and calculate all the expenses and revenue, and collect data from the price list for invoice and maneging the stock</p>
+									<ul class="actions special">
+										<li><a href="https://docs.google.com/spreadsheets/d/1pUWnb29foiTXKqd8OiPbvVx5YVlqg_oq/edit?usp=sharing&ouid=106771175477356338080&rtpof=true&sd=true" class="button">view excel project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>									
+										<h2><a href="https://drive.google.com/file/d/1YYKb9bEw7DsBXgn3QbvsNtY00Lka-EP8/view?usp=share_link">simple data entry form<br />
+										Excel project</a></h2>
+									</header>
+									<a href="https://drive.google.com/file/d/1YYKb9bEw7DsBXgn3QbvsNtY00Lka-EP8/view?usp=share_link" class="image fit"><img src="images/pic-10.jpg" alt="" /></a>
+									<p>here is another project i created for my company, created this project using VBA, to creat a data base, and enter the data of the clints easily and rapidly</p>
+									<ul class="actions special">
+										<li><a href="https://drive.google.com/file/d/1YYKb9bEw7DsBXgn3QbvsNtY00Lka-EP8/view?usp=share_link" class="button">view excel project</a></li>
+									</ul>
+								</article>	
 					<!--section-->
 						</section>
 						<section class="split contact">
