--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="https://drive.google.com/file/d/1Hi4TjsV5SpUh-vGDjY5FDq025Zcq3AcA/view?usp=share_link">MY RESUME<br />
+									<h2><a href="https://docs.google.com/document/d/1A5LogG-EIK1VMthBM-FIg8kRSA78Ei0U2ZBOGCv8uN4/edit?usp=drive_link">MY RESUME<br />
 									</a></h2>
 									
 								</header>
-								<a href="https://drive.google.com/file/d/1Hi4TjsV5SpUh-vGDjY5FDq025Zcq3AcA/view?usp=share_link" class="image main"><img src="images/resume.jpg" alt="" /></a>
+								<a href="https://docs.google.com/document/d/1A5LogG-EIK1VMthBM-FIg8kRSA78Ei0U2ZBOGCv8uN4/edit?usp=drive_link" class="image main"><img src="images/resume.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://drive.google.com/file/d/1Hi4TjsV5SpUh-vGDjY5FDq025Zcq3AcA/view?usp=share_link" class="button large">view resume</a></li>
+									<li><a href="https://docs.google.com/document/d/1A5LogG-EIK1VMthBM-FIg8kRSA78Ei0U2ZBOGCv8uN4/edit?usp=drive_link" class="button large">view resume</a></li>
 								</ul>
 							</article>
 
